--- a/201711-TC3022-2/201711-TC3022-2.vcxproj.filters
+++ b/201711-TC3022-2/201711-TC3022-2.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Billboard.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ParticleSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="PalmTree.frag">
@@ -115,18 +118,18 @@
     <ClInclude Include="Billboard.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ParticleSystem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="heighmap.jpg">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="..\..\..\Visual Studio 2015\Projects\201711-TC3022-2-master\201711-TC3022-2\lluvia.png">
+    <Image Include="lluvia.gif">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="..\..\..\Visual Studio 2015\Projects\201711-TC3022-2-master\201711-TC3022-2\nieve.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="..\..\..\Visual Studio 2015\Projects\201711-TC3022-2-master\201711-TC3022-2\polvo.png">
+    <Image Include="nieve.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
