Borre tu lluvia

--- a/201711-TC3022-2/201711-TC3022-2.vcxproj
+++ b/201711-TC3022-2/201711-TC3022-2.vcxproj
@@ -164,8 +164,9 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="heighmap.jpg" />
-    <Image Include="lluvia.gif" />
+    <Image Include="lluvia.png" />
     <Image Include="nieve.png" />
+    <Image Include="polvo.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
