sé que tengo mis archivos viejos en alguna parte, pero no sé dónde

--- a/201711-TC3022-2/201711-TC3022-2.vcxproj
+++ b/201711-TC3022-2/201711-TC3022-2.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="Transform.h" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\..\..\..\Pictures\instrucciones.jpg" />
     <Image Include="heighmap.jpg" />
     <Image Include="lluvia.png" />
     <Image Include="nieve.png" />
