ya tenemos instrucciones! y se mueven hacia atrás y hacia adelante junto con la cámara. También ya se respetan los cambios de Speed. **Bugs: no se escala a más grande el polvo, cuando se rota la cámara las instrucciones desaparecen

--- a/201711-TC3022-2/201711-TC3022-2.vcxproj
+++ b/201711-TC3022-2/201711-TC3022-2.vcxproj
@@ -163,8 +163,8 @@
     <ClInclude Include="Transform.h" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\..\..\Pictures\instrucciones.jpg" />
     <Image Include="heighmap.jpg" />
+    <Image Include="instrucciones.png" />
     <Image Include="lluvia.png" />
     <Image Include="nieve.png" />
     <Image Include="polvo.png" />
