--- a/201711-TC3022-2/201711-TC3022-2.vcxproj.filters
+++ b/201711-TC3022-2/201711-TC3022-2.vcxproj.filters
@@ -135,7 +135,7 @@
     <Image Include="lluvia.png">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="..\..\..\..\Pictures\instrucciones.jpg">
+    <Image Include="instrucciones.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
